# debian_audit

./: ChangeLog  Makefile.am  Makefile.in  README-install  THANKS  TODO  aclocal.m4  audit.spec  audit_1.5.3.orig.tar.gz.delta  audit_1.5.3.orig.tar.gz.id  audit_1.7.10.orig.tar.gz.delta  audit_1.7.10.orig.tar.gz.id  audit_1.7.11.orig.tar.gz.delta  audit_1.7.11.orig.tar.gz.id  audit_1.7.12.orig.tar.gz.delta  audit_1.7.12.orig.tar.gz.id  audit_1.7.13.orig.tar.gz.delta  audit_1.7.13.orig.tar.gz.id  audit_1.7.18.orig.tar.gz.delta  audit_1.7.18.orig.tar.gz.id  audit_1.7.4.orig.tar.gz.delta  audit_1.7.4.orig.tar.gz.id  audit_1.7.8.orig.tar.gz.delta  audit_1.7.8.orig.tar.gz.id  audit_1.7.9.orig.tar.gz.delta  audit_1.7.9.orig.tar.gz.id  audit_2.1.3.orig.tar.gz.delta  audit_2.1.3.orig.tar.gz.id  audit_2.2.1.orig.tar.gz.delta  audit_2.2.1.orig.tar.gz.id  audit_2.2.2.orig.tar.gz.delta  audit_2.2.2.orig.tar.gz.id  audit_2.2.3.orig.tar.gz.delta  audit_2.2.3.orig.tar.gz.id  audit_2.3.1.orig.tar.gz.delta  audit_2.3.1.orig.tar.gz.id  audit_2.3.2.orig.tar.gz.delta  audit_2.3.2.orig.tar.gz.id  audit_2.3.3.orig.tar.gz.delta  audit_2.3.3.orig.tar.gz.id  (+45 more)
audisp/: Makefile.am  Makefile.in  audispd.c
auparse/: Makefile.am  Makefile.in  auditd-config.c  auparse-defs.h  auparse.c  auparse.h  ellist.c  ellist.h  internal.h  interpret.c  interpret.h  nvlist.c  nvlist.h  nvpair.c  nvpair.h  open-flagtab.h  private.h  rlist.c  rlist.h  rnode.h  typetab.h
auparse/test/: Makefile  Makefile.in  auparse_test.c  auparse_test.py
bindings/: Makefile.in
contrib/: avc_syslog  capp.rules  nispom.rules  skeleton.c
debian/: audispd.8  auditd.README.Debian  auditd.default  auditd.examples  auditd.init  auditd.install  auditd.lintian-overrides  auditd.postinst  changelog  control  copyright  libaudit-dev.examples  libaudit-dev.install  libaudit-dev.links  libaudit1.install  libaudit1.symbols  libauparse-dev.install  libauparse-dev.links  libauparse0.install  libauparse0.symbols  python-audit.examples  python-audit.install  rules  system-config-audit.install
docs/: Makefile.am  Makefile.in  auditctl.8  auditd.8  auditd.conf.5  auparse_find_field.3  auparse_get_milli.3  auparse_get_serial.3  auparse_get_time.3  auparse_get_timestamp.3  auparse_init.3  auparse_next_record.3  aureport.8  ausearch.8  ausearch_add_item.3  autrace.8
init.d/: Makefile.am  Makefile.in  auditd.conf  auditd.init
lib/: Makefile.am  Makefile.in  alpha_table.h  audit_logging.c  deprecated.c  fieldtab.h  i386_table.h  ia64_table.h  libaudit.c  libaudit.h  lookup_table.c  msg_typetab.h  netlink.c  ppc_table.h  private.h  s390_table.h  s390x_table.h  x86_64_table.h
lib/test/: Makefile.in
m4/: Makefile.in
rules/: Makefile.in
src/: Makefile.in  auditctl-llist.c  auditctl.c  auditd-config.c  auditd-config.h  auditd-dispatch.c  auditd-dispatch.h  auditd-event.c  auditd-event.h  auditd.c  aureport-options.c  aureport-options.h  aureport-output.c  aureport-scan.c  aureport-scan.h  aureport.c  ausearch-common.h  ausearch-llist.c  ausearch-llist.h  ausearch-match.c  ausearch-options.c  ausearch-options.h  (+7 more)
(+65 files in other folders)
